fixing styles when on mobile landscape mode

--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ a:hover {
 .home {
   background: url("../img/aboutme.jpg") no-repeat center center;
   background-size: cover;
-  /*margin-top: 77px;*/
+  margin-top: 77px;
   height: 100vh; }
   .home:before {
     content: '';
@@ -121,6 +121,7 @@ a:hover {
     top: 0;
     right: 0;
     bottom: -15px;
+    margin-bottom: -77px;
     left: 0;
     background-image: linear-gradient(to bottom right, #002f4b, #dc4225);
     opacity: .8; }
